<resources>
    <string name="app_name">Eyelash</string>
    <string name="new_title">New Record</string>
    <string name="photo_title">Photos</string>
    <string name="delete">Delete</string>

    <string name="action_add">Add</string>
    <string name="dateTitle">Date</string>
    <string name="eyeTitle">Eyes Type</string>
    <string name="styleTitle">Style</string>
    <string name="materialTitle">Material</string>
    <string name="curlTitle">Curl</string>
    <string name="thickTitle">Thick</string>
    <string name="lengthTitle">Length</string>
    <string name="photoTitle">Photos</string>

    <string name="search_hint">Enter phone number</string>

    <string-array name="eyes_type">
        <item>外雙眼皮</item>
        <item>內雙眼皮</item>
        <item>單眼皮</item>
        <item>丹鳳眼</item>
        <item>泡泡眼</item>
        <item>凹眼</item>
    </string-array>

    <string-array name="lash_material">
        <item>蠶絲纖維睫毛</item>
        <item>黑鑽天使睫毛</item>
        <item>天然水貂毛</item>
        <item>天然兔毛</item>
    </string-array>

    <string-array name="lash_style">
        <item>優雅型</item>
        <item>性感型</item>
        <item>可愛型</item>
        <item>豔麗型</item>
    </string-array>

    <string-array name="length">
        <item>8 mm</item>
        <item>9 mm</item>
        <item>10 mm</item>
        <item>11 mm</item>
        <item>12 mm</item>
        <item>13 mm</item>
        <item>14 mm</item>
    </string-array>

    <string-array name="curl">
        <item>J</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="thick">
        <item>0.7</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.5</item>
    </string-array>

</resources>
