<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/custom_item_horizontal_margin"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/header_back"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/new_custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_title"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/save_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle"
            android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:background="@android:color/white"
            android:hint="Name"
            android:textColorHint="@color/background"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:background="@android:color/white"
            android:hint="Cell phone"
            android:inputType="phone"
            android:textColorHint="@color/background"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/dateTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:datePickerMode="spinner"
                android:yearListItemTextAppearance="@android:style/TextAppearance.StatusBar.Title"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/eyeLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eyeTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/eyeTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/eyeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eyeWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/styleLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/styleTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/styleTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/styleValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/styleWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/materialLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/materialTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/materialTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/materialValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/materialWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/curlLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/curlTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/curlTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/curlValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/curlWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lengthLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lengthTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/lengthTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

                <TextView
                    android:id="@+id/lengthValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:paddingRight="@dimen/new_custom_item_padding_right_left"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lengthWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/new_custom_item_padding_top_bottom"
                android:paddingTop="@dimen/new_custom_item_padding_top_bottom"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/photoLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_custom_item_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/photoTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingLeft="@dimen/new_custom_item_padding_right_left"
                    android:text="@string/photoTitle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/new_custom_item_text_size"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
